# relay_core

./: .gitignore  README.md  build_all.sh  go.mod  go.sum  instance.go  keepalive_codec_ffi.go  livekit-cloud.yaml  livekit.yaml  livekit_bridge_ffi.go  main.go  proxy_mode_ffi.go  relay_room_ffi.go  stats_probe_ffi.go
docs/: api-reference.md  architecture.md  build.md  coordinator.md  dart-ffi.md  election.md  keepalive.md  proxy-mode.md  relay-room.md  shadow-connection.md  stats.md
example/basic/: main.go
flutter_sfu_relay/: Makefile  README.md  ffigen.yaml  pubspec.yaml
flutter_sfu_relay/android/: build.gradle  settings.gradle
flutter_sfu_relay/android/src/main/: AndroidManifest.xml
flutter_sfu_relay/docs/: api-reference.md  architecture.md  election.md  ios-broadcast-extension.md  livekit-integration.md  platform-permissions.md  quick-start.md
flutter_sfu_relay/example/: README.md  makefile  pubspec.yaml
flutter_sfu_relay/example/android/app/: build.gradle.kts
flutter_sfu_relay/example/ios/: Podfile
flutter_sfu_relay/example/ios/BroadcastExtension/: BroadcastExtension.entitlements  SampleHandler.swift  SampleUploader.swift  SocketConnection.swift
flutter_sfu_relay/example/ios/Runner/: AppDelegate.swift  Info.plist
flutter_sfu_relay/example/ios/Runner.xcodeproj/: project.pbxproj
flutter_sfu_relay/example/lib/: main.dart
flutter_sfu_relay/example/lib/pages/: home_page.dart
flutter_sfu_relay/example/lib/theme/: app_theme.dart
flutter_sfu_relay/example/lib/widgets/: control_bar.dart  participant_tile.dart  screen_share_dialog.dart
flutter_sfu_relay/example/linux/: CMakeLists.txt
flutter_sfu_relay/example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter_sfu_relay/example/linux/runner/: my_application.cc
flutter_sfu_relay/example/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter_sfu_relay/example/macos/Runner/: DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift  Release.entitlements  ScreenShareOverlayController.swift
flutter_sfu_relay/example/macos/Runner.xcodeproj/: project.pbxproj
flutter_sfu_relay/example/windows/: CMakeLists.txt
flutter_sfu_relay/example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter_sfu_relay/example/windows/runner/: Runner.rc  main.cpp
flutter_sfu_relay/ios/: flutter_sfu_relay.podspec  librelay_exports.txt
flutter_sfu_relay/ios/Classes/: flutter_sfu_relay.c  librelay.h
flutter_sfu_relay/ios/librelay.xcframework/: Info.plist
flutter_sfu_relay/ios/librelay.xcframework/ios-arm64/: Headers
flutter_sfu_relay/lib/: flutter_sfu_relay.dart  flutter_sfu_relay_bindings_generated.dart  screen_share_helper.dart
flutter_sfu_relay/lib/src/: enums.dart
flutter_sfu_relay/linux/: CMakeLists.txt  librelay.h  screen_share_plugin.cc  screen_share_plugin.h
flutter_sfu_relay/macos/: fix_install_name.sh  flutter_sfu_relay.podspec  librelay.h
flutter_sfu_relay/macos/Classes/: ScreenSharePlugin.swift  flutter_sfu_relay.c
flutter_sfu_relay/src/: CMakeLists.txt  flutter_sfu_relay.c
flutter_sfu_relay/test/: flutter_sfu_relay_test.dart
flutter_sfu_relay/windows/: CMakeLists.txt  librelay.h  screen_share_plugin.cpp  screen_share_plugin.h
pkg/election/: election.go  election_test.go
pkg/sfu/: benchmark_test.go  buffer_pool.go  buffer_pool_test.go  codec.go  coordinator.go  coordinator_test.go  errors.go  failover.go  failover_test.go  forwarder.go  integration_test.go  jitter_buffer.go  jitter_buffer_test.go  keepalive.go  keepalive_test.go  livekit_bridge.go  mock_webrtc_test.go  network_probe.go  network_probe_test.go  network_simulation_test.go  peer.go  relay_room.go  relay_room_test.go  room.go  scenario_test.go  sfu.go  source_switcher.go  source_switcher_test.go  stats.go  stats_test.go
pkg/signaling/: types.go
pkg/utils/: logger.go  pool.go
(+38 files in other folders)
